--- a/architecture/2-UserStories/4-CompositionOfOSHW.yaml
+++ b/architecture/2-UserStories/4-CompositionOfOSHW.yaml
@@ -1,6 +1,8 @@
 id: 4
+name: “Composition of OSHW”
 actor: “OSHW Developer”
 behavior: “include external projects as elements of my project”
 rationale: “build upon previous engineering effort (my own or others’)”
-derivedFrom: “../1-StakeholderNeeds/1-OSHW_IsLikeOSS.yaml”
+derivedFrom: 
+- “1-StakeholderNeeds/3-OSHW_IsLikeOSS.yaml”
 example: “Using an Arduino Uno as the controller board for an OSHW robot project.”
