fixing typos in architecture yaml files and images readme

--- a/architecture/1-StakeholderNeeds/2-OSHW_Certification.yaml
+++ b/architecture/1-StakeholderNeeds/2-OSHW_Certification.yaml
@@ -1,4 +1,4 @@
 id: 2
-name: “OSHW Certification”
-statement: “OSHW projects should be developed and shared in accordance to the https://certification.oshwa.org/process.html[OSHW Certification process].”
+name: "OSHW Certification"
+statement: "OSHW projects should be developed and shared in accordance to the https://certification.oshwa.org/process.html[OSHW Certification process]."
 derivedFrom: []
