--- a/architecture/1-StakeholderNeeds/3-OSHW_IsLikeOSS.yaml
+++ b/architecture/1-StakeholderNeeds/3-OSHW_IsLikeOSS.yaml
@@ -1,5 +1,5 @@
 id: 3
-name: “OSHW should be like OSS”
-statement: “Open Source Hardware should be like Open Source Software to the greatest degree possible (e.g. sharing, development, licensing).”
+name: "OSHW should be like OSS"
+statement: "Open Source Hardware should be like Open Source Software to the greatest degree possible (e.g. sharing, development, licensing)."
 derivedFrom: 
-- “1-StakeholderNeeds/1-OSHW_Definition.yaml“
+- "1-StakeholderNeeds/1-OSHW_Definition.yaml"
