--- a/architecture/1-StakeholderNeeds/1-OSWH_Definition.yaml
+++ b/architecture/1-StakeholderNeeds/1-OSWH_Definition.yaml
@@ -1,4 +1,4 @@
 id: 1
-name: “OSHW Definition”
-statement: “OSHW projects should be developed and shared in accordance to the https://www.oshwa.org/definition/[OSHW Definition].”
+name: "OSHW Definition"
+statement: "OSHW projects should be developed and shared in accordance to the https://www.oshwa.org/definition/[OSHW Definition]."
 derivedFrom: []
