--- a/architecture/2-UserStories/1-BranchOSHW.yaml
+++ b/architecture/2-UserStories/1-BranchOSHW.yaml
@@ -1,9 +1,9 @@
 id: 1
-name: “Branch OSHW”
-actor: “OSHW Developer”
-behavior: “use branches in the development of OSHW”
-rationale: “modify the project source in parallel lines of development”
+name: "Branch OSHW"
+actor: "OSHW Developer"
+behavior: "use branches in the development of OSHW"
+rationale: "modify the project source in parallel lines of development"
 derivedFrom: 
-- “1-StakeholderNeeds/2-OSHW_Certification.yaml”
-- “1-StakeholderNeeds/3-OSHW_IsLikeOSS.yaml”
-example: “Creating a v1 branch to preserve and maintain v1 source as part of OSHW certification compliance.  New development can then happen on trunk or a v2 branch.”
+- "1-StakeholderNeeds/2-OSHW_Certification.yaml"
+- "1-StakeholderNeeds/3-OSHW_IsLikeOSS.yaml"
+example: "Creating a v1 branch to preserve and maintain v1 source as part of OSHW certification compliance.  New development can then happen on trunk or a v2 branch."
