--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dof",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "Distributed OSHW Framework (DOF)",
     "keywords": [
         "oshw"
@@ -11,6 +11,7 @@
     "license": "CC-BY-4.0",
     "dependencies": {
         "js-yaml": "^3.12.0",
-        "liquidjs": "^6.1.1"
+        "liquidjs": "^6.1.1",
+        "minimist": "^1.2.0"
     }
 }
