Fixes in response to pull request comments

--- a/architecture/3-DataStructures/2-ComponentListItem.yaml
+++ b/architecture/3-DataStructures/2-ComponentListItem.yaml
@@ -60,6 +60,6 @@ elements:
   - key: interfaces
     type: list
     itemType: 3-DataStructures/6-InterfaceListItem.yaml'
-    description: Listing the interfaces of this part or tool.
+    description: Listing of interfaces for the part or tool.
     derivedFrom: []
 derivedFrom: []
